--- a/src/app/authentication/layout/layout.component.html
+++ b/src/app/authentication/layout/layout.component.html
@@ -3,7 +3,7 @@
 
     </nb-layout-header>
     <nb-layout-column>
-
+      <router-outlet></router-outlet>
     </nb-layout-column>
     <nb-layout-footer>
 
