--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -533,7 +533,7 @@
 <!-- ***** Contact Us End ***** -->
 
 <!-- ***** Footer Start ***** -->
-<footer>
+<!-- <footer>
   <div class="container">
       <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12">
@@ -548,8 +548,8 @@
       </div>
       <div class="row">
           <div class="col-lg-12">
-              <p class="copyright">Copyright &copy; 2020 Softy Pinko Company - Design: TemplateMo</p>
+              <p class="copyright">Copyright &copy; 2021 BookWorms Company - Design: TemplateMo</p>
           </div>
       </div>
   </div>
-</footer>
+</footer> -->
