--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -46,11 +46,11 @@
 	</div>
 </div>
 
-<footer>
+<!-- <footer>
 	<p>
 		Created with <i class="fa fa-heart"></i> by
 		<a target="_blank" href="https://florin-pop.com">Florin Pop</a>
 		- Read how I created this and how you can join the challenge
 		<a target="_blank" href="https://www.florin-pop.com/blog/2019/03/double-slider-sign-in-up-form/">here</a>.
 	</p>
-</footer>
+</footer> -->
