--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -14,7 +14,7 @@
       </div>
       <div class="row">
           <div class="col-lg-12">
-              <p class="copyright">Copyright &copy; 2021 BookWorms Company - Design: TemplateMo</p>
+              <p class="copyright">Copyright &copy; 2021 BookWorms Company</p>
           </div>
       </div>
   </div>
