--- a/src/app/authentication/reset-password/reset-password.component.html
+++ b/src/app/authentication/reset-password/reset-password.component.html
@@ -1,1 +1,42 @@
-<p>reset-password works!</p>
+<div class="container">
+  <nb-card accent="primary">
+      <nb-card-header>
+          <h2>Generate OTP</h2>
+      </nb-card-header>
+      <nb-card-body>
+          <mat-form-field appearance="fill" class="col-12">
+              <mat-label>Enter Recovery Email</mat-label>
+              <input matInput #email>
+          </mat-form-field>
+
+          <div class="col">
+              <button nbButton class="mt-5" (click)="sendOTP(email.value)">Send OTP</button>
+          </div>
+      </nb-card-body>
+  </nb-card>
+
+  <nb-card accent="primary" class="mt-5">
+      <nb-card-header>
+          <h2>Reset Password</h2>
+      </nb-card-header>
+      <nb-card-body>
+          <form [formGroup]="resetform" (submit)="resetPassword(resetform.value)">
+              <mat-form-field appearance="fill" class="col-12 mt-4">
+                  <mat-label>Enter OTP recieved in your registered email</mat-label>
+                  <input matInput formControlName="otp">
+              </mat-form-field>
+              <mat-form-field appearance="fill" class="col-12 mt-4">
+                  <mat-label>Enter New Password</mat-label>
+                  <input matInput formControlName="new">
+              </mat-form-field>
+              <mat-form-field appearance="fill" class="col-12 mt-4">
+                  <mat-label>Repeat Password</mat-label>
+                  <input matInput formControlName="confirm">
+              </mat-form-field>
+              <div class="col">
+                  <button nbButton class="mt-5">Reset</button>
+              </div>
+          </form>
+      </nb-card-body>
+  </nb-card>
+</div>
