--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -33,13 +33,13 @@
 	<div class="overlay-container">
 		<div class="overlay">
 			<div class="overlay-panel overlay-left">
-				<h1>Welcome Back!</h1>
-				<p>To keep connected with us please login with your personal info</p>
+				<h1 style="color: aliceblue;">Welcome Back!</h1>
+				<p style="color: aliceblue;">To keep connected with us please login with your personal info</p>
 				<button class="ghost" id="signIn" (click)="toggleSignIn()">Sign In</button>
 			</div>
 			<div class="overlay-panel overlay-right">
-				<h1>Hello, Friend!</h1>
-				<p>Enter your personal details and start journey with us</p>
+				<h1 style="color: aliceblue;">Hello, Friend!</h1>
+				<p style="color: aliceblue;">Enter your personal details and start journey with us</p>
 				<button class="ghost" id="signUp" (click)="toggleSignUp()">Sign Up</button>
 			</div>
 		</div>
