--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
 body {
   font-family: Raleway;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.register {
+  background: url("assets/register_back.png") no-repeat center;
+  background-attachment: fixed;
+}
