--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -1,7 +1,7 @@
 <h2>Sign in/up Form</h2>
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
-		<form action="#">
+		<form [formGroup]="signupform" (ngSubmit)="submitSignupForm()">
 			<h1>Create Account</h1>
 			<div class="social-container">
 				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
@@ -9,14 +9,15 @@
 				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
 			</div>
 			<span>or use your email for registration</span>
-			<input type="text" placeholder="Name" />
-			<input type="email" placeholder="Email" />
-			<input type="password" placeholder="Password" />
+			<input type="text" placeholder="Name" formControlName="fullname"/>
+			<input type="email" placeholder="Email" formControlName="email"/>
+			<input type="password" placeholder="Password" formControlName="password"/>
+      <input type="password" placeholder="Password" formControlName="confirm"/>
 			<button>Sign Up</button>
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
-		<form action="#">
+		<form [formGroup]="signinform" (ngSubmit)="submitSigninForm()">
 			<h1>Sign in</h1>
 			<div class="social-container">
 				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
@@ -24,8 +25,8 @@
 				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
 			</div>
 			<span>or use your account</span>
-			<input type="email" placeholder="Email" />
-			<input type="password" placeholder="Password" />
+			<input type="email" placeholder="Email" formControlName="email"/>
+			<input type="password" placeholder="Password" formControlName="password" />
 			<a href="#">Forgot your password?</a>
 			<button>Sign In</button>
 		</form>
