--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -9,10 +9,10 @@
 				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
 			</div>
 			<span>or use your email for registration</span>
-			<input type="text" placeholder="Name" formControlName="fullname"/>
-			<input type="email" placeholder="Email" formControlName="email"/>
-			<input type="password" placeholder="Password" formControlName="password"/>
-      <input type="password" placeholder="Password" formControlName="confirm"/>
+			<input type="text" placeholder="Name" name="fullname" formControlName="fullname"/>
+			<input type="email" placeholder="Email" name="email" formControlName="email"/>
+			<input type="password" placeholder="Password" name="password" formControlName="password"/>
+      <input type="password" placeholder="Confirm Password" name="confirm" formControlName="confirm"/>
 			<button>Sign Up</button>
 		</form>
 	</div>
@@ -25,8 +25,8 @@
 				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
 			</div>
 			<span>or use your account</span>
-			<input type="email" placeholder="Email" formControlName="email"/>
-			<input type="password" placeholder="Password" formControlName="password" />
+			<input type="email" placeholder="Email" name="email" formControlName="email"/>
+			<input type="password" placeholder="Password" name="password" formControlName="password" />
 			<a href="#">Forgot your password?</a>
 			<button>Sign In</button>
 		</form>
