--- a/src/app/authentication/layout/layout.component.html
+++ b/src/app/authentication/layout/layout.component.html
@@ -3,12 +3,12 @@
 
     <!-- always visible -->
     <nb-actions size="medium">
-      <nb-action class="mt-4" nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/blog/home']" routerLinkActive="router-link-active" >
+      <nb-action class="mt-4" nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']" routerLinkActive="router-link-active" >
           <h1 class="site-title">{{title}}</h1>
       </nb-action>
-      <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/blog/home']">Home</nb-action>
+      <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']">Home</nb-action>
       <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/signup']">About Us</nb-action>
-      <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/signup']">Any Queries?Contact Us</nb-action>
+      <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/signup']">Contact Us</nb-action>
     </nb-actions>
 
     <!-- visible when not logged in -->
