--- a/src/app/user/add-novel/add-novel.component.html
+++ b/src/app/user/add-novel/add-novel.component.html
@@ -62,9 +62,26 @@
                               <input type="file" class="form-control" (change)="uploadNovel($event)">
                           </div>
                       </div>
-                      <img [src]="imgURL" *ngIf="imgURL" alt="" class="img-fluid mt-4">
+                      <img [src]="imgURL" *ngIf="imgURL" alt="" class="img-fluid mt-4"> <hr>
+
+                      <div class="row">
+
+                        <div class="col-md-4 ">
+                          <mat-checkbox class="text-center" formControlName="rentable">Rent</mat-checkbox>
+                        </div>
+                        <div class="col-md-4 mx-auto">
+                          <mat-checkbox class="example-margin" formControlName="soldable">Sell</mat-checkbox>
+                        </div>
+                        <div class="col-md-4 mx-auto">
+                          <mat-checkbox class="example-margin" formControlName="exchangable">Exchange</mat-checkbox>
+                        </div>
+
+
+
+                      </div>
 
                       <button class="w-100 mt-5" nbButton status="primary">Submit</button>
+
 
                   </form>
                   <!-- <div class="mt-3">
@@ -75,18 +92,8 @@
                       </div>
                   </div> -->
 
-                  <mat-form-field appearance="fill">
-                    <mat-label>Toppings</mat-label>
-                    <mat-select [formControl]="toppings" multiple>
-                      <mat-select-trigger>
-                        {{toppings.value ? toppings.value[0] : ''}}
-                        <span *ngIf="toppings.value?.length > 1" class="example-additional-selection">
-                          (+{{toppings.value.length - 1}} {{toppings.value?.length === 2 ? 'other' : 'others'}})
-                        </span>
-                      </mat-select-trigger>
-                      <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
-                    </mat-select>
-                  </mat-form-field>
+
+
 
               </nb-card-body>
           </nb-card>
