--- a/src/app/user/manage-novels/manage-novels.component.html
+++ b/src/app/user/manage-novels/manage-novels.component.html
@@ -7,6 +7,8 @@
         </nb-accordion-item-header>
         <nb-accordion-item-body>
           {{novel.desc}}
+          <hr>
+          <p>{{novel.genre}}</p>
 
 
 
@@ -31,6 +33,8 @@
         </nb-accordion-item-header>
         <nb-accordion-item-body>
           {{novel.desc}}
+          <hr>
+          <p>{{novel.genre}}</p>
 
 
 
@@ -55,6 +59,8 @@
         </nb-accordion-item-header>
         <nb-accordion-item-body>
           {{novel.desc}}
+          <hr>
+          <p>{{novel.genre}}</p>
 
 
 
