--- a/src/app/user/manage-novels/manage-novels.component.html
+++ b/src/app/user/manage-novels/manage-novels.component.html
@@ -12,7 +12,7 @@
           <p>{{novel.genre}}</p>
           <hr>
           <div class="col-md-4">
-            <img [src]="url+fetchNovels.avatar" class="img-fluid" alt="">
+            <img [src]="url+novel.avatar" class="img-fluid" alt="">
         </div>
         <hr>
 
