--- a/src/app/admin/layout/layout.component.html
+++ b/src/app/admin/layout/layout.component.html
@@ -8,15 +8,15 @@
           </nb-action>
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']">Home</nb-action>
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/signup']">About Us</nb-action>
-          <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/signup']">Contact Us</nb-action>
+          <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/contactus']">Contact Us</nb-action>
         </nb-actions>
-    
+
         <!-- visible when not logged in -->
         <nb-actions size="medium"  *ngIf="!userService.loggedin">
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/signup']">Register</nb-action>
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/signin']">Login</nb-action>
         </nb-actions>
-    
+
         <!-- visible when logged in -->
         <nb-actions size="medium" *ngIf="userService.loggedin">
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="[userService.currentUser.isadmin?'/admin':'/user']" >{{userService.currentUser.isadmin?'Admin Dashboard': 'User Dashboard'}}</nb-action>
@@ -29,7 +29,7 @@
            [picture]="url+userService.currentUser.avatar"
            [routerLink]="[userService.currentUser.isadmin?'/admin':'/user']">
         </nb-user>
-    
+
     </nb-layout-header>
     <nb-layout-column>
         <router-outlet></router-outlet>
