--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,62 @@
-<p>profile works!</p>
+<div class="col-md-11 mx-auto">
+
+  <nb-card accent="primary" *ngIf="formReady">
+      <nb-card-header>
+          <p class="h4">Manage Your Profile</p>
+      </nb-card-header>
+      <nb-card-body style="padding: 3rem;">
+          <div class="row">
+              <div class="col-md-4">
+                  <img [src]="url+currentUser.avatar" class="img-fluid" alt="">
+              </div>
+              <div class="col-md-8">
+                  <form [formGroup]="updateForm" (ngSubmit)="updateProfile()">
+                      <mat-form-field appearance="fill" class="w-100 mt-2">
+                          <mat-label>Full Name</mat-label>
+                          <input type="text" matInput formControlName="fullname">
+                      </mat-form-field>
+
+                      <mat-form-field appearance="fill" class="w-100 mt-4">
+                          <mat-label>Email</mat-label>
+                          <input type="email" matInput formControlName="email">
+                      </mat-form-field>
+
+                      <mat-form-field appearance="fill" class="w-100 mt-4">
+                          <mat-label>Age</mat-label>
+                          <input type="number" matInput formControlName="age">
+                      </mat-form-field>
+                      <button nbButton status="primary" hero class="mt-3">Update</button>
+
+                  </form>
+              </div>
+          </div>
+
+      </nb-card-body>
+  </nb-card>
+
+  <nb-card accent="danger" ngsReveal>
+      <nb-card-header>
+          <p class="h4">Change Your Password</p>
+      </nb-card-header>
+      <nb-card-body style="padding: 3rem;">
+          <mat-form-field appearance="fill" class="w-100 mt-2">
+              <mat-label>Previous Password</mat-label>
+              <input type="text" matInput disabled [(ngModel)]="currentUser.password">
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="w-100 mt-5">
+              <mat-label>New Password</mat-label>
+              <input type="text" matInput #newpass>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="w-100 mt-2">
+              <mat-label>Confirm Password</mat-label>
+              <input type="text" matInput #conpass>
+          </mat-form-field>
+
+          <button nbButton status="danger" hero class="mt-3" (click)="updatePassword(newpass.value, conpass.value)" >Update</button>
+
+
+      </nb-card-body>
+  </nb-card>
+</div>
