--- a/src/app/admin/layout/layout.component.html
+++ b/src/app/admin/layout/layout.component.html
@@ -31,6 +31,11 @@
         </nb-user>
 
     </nb-layout-header>
+    <nb-sidebar>
+      <nb-menu [items]="sidebarItems">
+
+      </nb-menu>
+  </nb-sidebar>
     <nb-layout-column>
         <router-outlet></router-outlet>
     </nb-layout-column>
