--- a/src/app/authentication/list-sell/list-sell.component.html
+++ b/src/app/authentication/list-sell/list-sell.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="col-md-8">
-      <nb-card size="medium" style="size: 40rem;">
+      <nb-card>
           <nb-card-header>
             Sell Your Novels
           </nb-card-header>
@@ -18,7 +18,7 @@
                   <div class="col-md-8">
                     <h3>{{novel.title}}</h3>
                     <h6 class="text-muted">{{novel.genre}}</h6>
-                    <button nbButton class="mt-4">{{novel.price | currency:'INR'}}</button>
+                    <button [routerLink]="['/app/noveldetails', novel._id]" routerLinkActive="router-link-active" nbButton class="mt-4">{{novel.price | currency:'INR'}}</button>
                   </div>
                 </div>
               </div>
