--- a/src/app/admin/manage-user/manage-user.component.html
+++ b/src/app/admin/manage-user/manage-user.component.html
@@ -14,7 +14,7 @@
                   {{user.email}}
                   <div class="row mt-5">
                       <div class="col text-center">
-                          <button class="col-10" nbButton (click)="updateUser(user._id)">Edit</button>
+                          <button class="col-10" nbButton (click)="updateUser(user._id)" status ="primary">Edit</button>
                       </div>
 
                       <div class="col text-center">
