--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,12 +8,12 @@
 
     <nav id="navbar" class="navbar order-last order-lg-0">
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a [routerLink]="['/home']" routerLinkActive="router-link-active" >Home</a></li>
 
 
         <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
-            <li><a [routerLink]="['/app/contactus']" routerLinkActive="router-link-active" >About Us</a></li>
+            <li><a href="#" >About Us</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="testimonials.html">Testimonials</a></li>
             <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -32,7 +32,7 @@
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="pricing.html">Pricing</a></li>
         <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a [routerLink]="['/app/contactus']" routerLinkActive="router-link-active">Contact</a></li>
 
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
