--- a/src/app/authentication/list-rent/list-rent.component.html
+++ b/src/app/authentication/list-rent/list-rent.component.html
@@ -1,29 +1,72 @@
-<div class="row mt-5">
-  <div class="col-md-3">
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <nb-card style="position: sticky;top:0;">
+        <nb-card-body>
+          <h3 class="mt-3">Search</h3>
+          <mat-form-field class="w-100 mt-4" appearance="outline">
+            <mat-label>Search Novel</mat-label>
+            <input type="text" matInput>
+          </mat-form-field>
+  
+          <mat-form-field class="w-100 mt-2" appearance="outline">
+            <mat-label>Search Author</mat-label>
+            <input type="text" matInput>
+          </mat-form-field>
+  
+          <mat-form-field class="w-100 mt-2" appearance="outline">
+            <mat-label>Search Uploader</mat-label>
+            <input type="text" matInput>
+          </mat-form-field>
+  
+          <hr>
+          <h3 class="mt-3">Filters</h3>
+          <mat-form-field class="w-100 mt-4" appearance="outline">
+            <mat-label>Genre</mat-label>
+            <mat-select>
+              <mat-option value="">Fantasy</mat-option>
+              <mat-option value="">Mystry</mat-option>
+              <mat-option value="">Romance</mat-option>
+              <mat-option value="">Sci-Fi</mat-option>
+            </mat-select>
+          </mat-form-field>
 
-  </div>
-
-  <div class="col-md-9">
-      <nb-card >
-          <nb-card-header>
-            Rent Your Novels
-          </nb-card-header>
-          <nb-list>
-            <nb-list-item *ngFor="let novel of novelList">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-md-4">
-                    <img [src]="url+novel.avatar" class="img-fluid" alt="">
-                  </div>
-                  <div class="col-md-8">
-                    <h3>{{novel.title}}</h3>
-                    <h6 class="text-muted">{{novel.genre}}</h6>
-                    <button [routerLink]="['/app/noveldetails', novel._id]" routerLinkActive="router-link-active"  nbButton class="mt-4">{{novel.price | currency:'INR'}}</button>
+          <mat-slider
+          thumbLabel
+  tickInterval="100"
+  step="100"
+  min="0"
+  max="100000"
+  aria-label="units"
+  ></mat-slider>
+  
+        </nb-card-body>
+      </nb-card>
+    </div>
+  
+    <div class="col-md-9">
+        <nb-card >
+            <nb-card-header>
+              Rent Your Novels
+            </nb-card-header>
+            <nb-list>
+              <nb-list-item *ngFor="let novel of novelList">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-md-4">
+                      <img [src]="url+novel.avatar" class="img-fluid" alt="">
+                    </div>
+                    <div class="col-md-8">
+                      <h3>{{novel.title}}</h3>
+                      <h6 class="text-muted">{{novel.genre}}</h6>
+                      <button [routerLink]="['/app/noveldetails', novel._id]" routerLinkActive="router-link-active"  nbButton class="mt-4">{{novel.price | currency:'INR'}}</button>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </nb-list-item>
-          </nb-list>
-        </nb-card>
+              </nb-list-item>
+            </nb-list>
+          </nb-card>
+    </div>
   </div>
+  
 </div>
