--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,11 +16,11 @@
             <li><a href="#" >About Us</a></li>
             <li><a href="team.html">Team</a></li>
             <li><a href="testimonials.html">Testimonials</a></li>
-            <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+            <li class="dropdown"><a href="#"><span>List Novels</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
-                <li><a href="#">Deep Drop Down 1</a></li>
-                <li><a href="#">Deep Drop Down 2</a></li>
-                <li><a href="#">Deep Drop Down 3</a></li>
+                <li><a [routerLink]="['/app/buynovel']" routerLinkActive="router-link-active" >Purchase Novels</a></li>
+                <li><a [routerLink]="['/app/exchangenovel']" routerLinkActive="router-link-active" >Exchange Novels</a></li>
+                <li><a [routerLink]="['/app/rentnovel']" routerLinkActive="router-link-active" >Rent Novels</a></li>
                 <li><a href="#">Deep Drop Down 4</a></li>
                 <li><a href="#">Deep Drop Down 5</a></li>
               </ul>
