--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,7 +28,7 @@
           </ul>
         </li>
 
-        <li><a [routerLink]="['/app/noveldetails/:id']" routerLinkActive="router-link-active" >Novels</a></li>
+        <!-- <li><a [routerLink]="['/app/noveldetails/:id']" routerLinkActive="router-link-active" >Novels</a></li> -->
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="pricing.html">Pricing</a></li>
         <li><a href="blog.html">Blog</a></li>
