--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,1 +1,13 @@
-<p>chat works!</p>
+<div class="col-md-10 mx-auto" style="height: 45rem;">
+    <nb-chat title="Nebular Conversational UI">
+        <nb-chat-message *ngFor="let msg of messageList"
+                         [message]="msg.text"
+                         [reply]="msg.reply"
+                         [sender]="msg.user.fullname"
+                         [date]="msg.created"
+                         [avatar]="url+msg.user.avatar">
+        </nb-chat-message>
+        <nb-chat-form (send)="sendMessage($event)">
+        </nb-chat-form>
+      </nb-chat>
+</div>
