footer bg color changed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,7 +38,7 @@
         </li>
 
         <!-- <li><a [routerLink]="['/app/exchangenovel']" routerLinkActive="router-link-active" >Novels</a></li> -->
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a [routerLink]="['/profile']" routerLinkActive="router-link-active" >Portfolio</a></li>
         <li><a href="pricing.html">Pricing</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a [routerLink]="['/app/contactus']" routerLinkActive="router-link-active">Contact</a></li>
