--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -67,8 +67,12 @@
       <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg);">
         <div class="carousel-container">
           <div class="carousel-content animate__animated animate__fadeInUp">
-            <h2>Welcome to <span>Company</span></h2>
-            <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+            <h2>Welcome to <span>BookWorms</span></h2>
+              <p>Bookworms is like a trade window of novels especially for Bibliophile.
+                Some of the novels are now very rare and are neither being published nor available in shops or at any website.
+                On this site People can post their novels collection on our website, so that people who need those novels, can get it from our website.
+              </p>
+
             <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
           </div>
         </div>
@@ -79,7 +83,7 @@
         <div class="carousel-container">
           <div class="carousel-content animate__animated animate__fadeInUp">
             <h2>Lorem Ipsum Dolor</h2>
-            <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+            <p>Some of the novels are now very rare and are neither being published nor available in shops or at any website.</p>
             <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
           </div>
         </div>
@@ -90,7 +94,7 @@
         <div class="carousel-container">
           <div class="carousel-content animate__animated animate__fadeInUp">
             <h2>Sequi ea ut et est quaerat</h2>
-            <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+            <p>On this site People can post their novels collection on our website, so that people who need those novels, can get it from our website.</p>
             <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
           </div>
         </div>
