new novels added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -67,7 +67,7 @@
       <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg);">
         <div class="carousel-container">
           <div class="carousel-content animate__animated animate__fadeInUp">
-            <h2>Welcome to <span>BookWorms</span></h2>
+            <h2>Welcome to BOOK<span style="color: #1bbd36;">WORMS</span></h2>
               <p>Bookworms is like a trade window of novels especially for Bibliophile.
                 Some of the novels are now very rare and are neither being published nor available in shops or at any website.
                 On this site People can post their novels collection on our website, so that people who need those novels, can get it from our website.
