--- a/src/app/user/manage-novels/manage-novels.component.html
+++ b/src/app/user/manage-novels/manage-novels.component.html
@@ -20,7 +20,7 @@
 
           <div class="row mt-5">
               <div class="col text-center">
-                  <button class="col-10" nbButton (click)="updateNovel(novel._id)">Edit</button>
+                  <button class="col-10" nbButton (click)="updateNovel(novel)">Edit</button>
               </div>
 
               <div class="col text-center">
@@ -44,7 +44,7 @@
 
           <div class="row mt-5">
               <div class="col text-center">
-                  <button class="col-10" nbButton (click)="updateNovel(novel._id)">Edit</button>
+                  <button class="col-10" nbButton (click)="updateNovel(novel)">Edit</button>
               </div>
 
               <div class="col text-center">
@@ -70,7 +70,7 @@
 
           <div class="row mt-5">
               <div class="col text-center">
-                  <button class="col-10" nbButton (click)="updateNovel(novel._id)">Edit</button>
+                  <button class="col-10" nbButton (click)="updateNovel(novel)">Edit</button>
               </div>
 
               <div class="col text-center">
@@ -82,3 +82,98 @@
   </nb-accordion>
   </mat-tab>
 </mat-tab-group>
+
+
+<nb-card *ngIf="showUpdateForm" style="margin-top:10%;border-radius: 0.5rem; box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12);">
+  <nb-card-body style="padding: 2rem;">
+      <form [formGroup]="novelform" (ngSubmit)="submitNovelForm()">
+          <h3 class="text-center">Upload Novel</h3>
+          <!-- <div class="row mt-4">
+              <div class="col-6">
+                  <button class="w-100" nbButton status="danger"><nb-icon icon="google"></nb-icon>GOOGLE</button>
+              </div>
+              <div class="col-6">
+                  <button class="w-100" nbButton status="primary"><nb-icon icon="facebook"></nb-icon>FACEBOOK</button>
+              </div>
+          </div>
+          <h5 class="text-center mt-3">OR</h5> -->
+          <div class="row mt-5">
+              <div class="col-md-6">
+                  <mat-form-field class="mt-2 w-100" appearance="outline">
+                      <mat-label>Novel Title</mat-label>
+                      <input type="text" matInput formControlName="title">
+                  </mat-form-field>
+              </div>
+
+              <div class="col-md-6">
+                  <mat-form-field class="mt-2 w-100" appearance="outline">
+                      <mat-label>Description</mat-label>
+                      <input type="text" matInput formControlName="desc">
+                  </mat-form-field>
+              </div>
+
+
+          </div>
+
+          <div class="row">
+              <div class="col-md-6">
+                  <mat-form-field class="mt-2 w-100" appearance="outline">
+                      <mat-label>Author Name</mat-label>
+                      <input type="text" matInput formControlName="author">
+                  </mat-form-field>
+              </div>
+              <div class="col-md-6">
+                  <mat-form-field class="mt-2 w-100" appearance="outline">
+                      <mat-label>Genre</mat-label>
+                      <input type="text" matInput formControlName="genre">
+                  </mat-form-field>
+              </div>
+          </div>
+
+          <div class="row">
+              <div class="col-md-6">
+                  <mat-form-field class="mt-2 w-100" appearance="outline">
+                      <mat-label>price</mat-label>
+                      <input type="number" matInput formControlName="price">
+                  </mat-form-field>
+              </div>
+              <div class="col-md-6">
+                  <label class="mt-2">Upload Image</label><br>
+                  <input type="file" class="form-control" (change)="uploadNovel($event)">
+              </div>
+          </div>
+          <img [src]="imgURL" *ngIf="imgURL" alt="" class="img-fluid mt-4"> <hr>
+
+          <div class="row">
+
+            <div class="col-md-4 ">
+              <mat-checkbox class="text-center" formControlName="rentable">Rent</mat-checkbox>
+            </div>
+            <div class="col-md-4 mx-auto">
+              <mat-checkbox class="example-margin" formControlName="soldable">Sell</mat-checkbox>
+            </div>
+            <div class="col-md-4 mx-auto">
+              <mat-checkbox class="example-margin" formControlName="exchangable">Exchange</mat-checkbox>
+            </div>
+
+
+
+          </div>
+
+          <button class="w-100 mt-5" nbButton status="primary">Submit</button>
+
+
+      </form>
+      <!-- <div class="mt-3">
+
+          <a style="font-family: Roboto;text-decoration: none;" [routerLink]="['/app/signin']">Already Registered? Login Here</a>
+          <div class="float-end">
+              <a style="font-family: Roboto;text-decoration: none;" [routerLink]="['/app/reset']">Forgot Password?</a>
+          </div>
+      </div> -->
+
+
+
+
+  </nb-card-body>
+</nb-card>
