--- a/src/app/authentication/layout/layout.component.html
+++ b/src/app/authentication/layout/layout.component.html
@@ -9,7 +9,7 @@
       <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']">Home</nb-action>
       <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/signup']">About Us</nb-action>
       <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/rentnovel']">Rent Novels</nb-action>
-      <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/buynovl']">Buy Novels</nb-action>
+      <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/buynovel']">Purchase Novels</nb-action>
       <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/exchangenovel']">Exchange Novels</nb-action>
       <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/contactus']">Contact Us</nb-action>
     </nb-actions>
