--- a/src/app/authentication/list-exchange/list-exchange.component.css
+++ b/src/app/authentication/list-exchange/list-exchange.component.css
@@ -6,7 +6,8 @@
   /* margin: 10px; */
   /* padding: 100px; */
   font-size: 30px;
-  padding-left: 21rem;
+  /* padding-left: 21rem; */
+  padding-left: 12.5rem;
   padding-bottom: 5rem;
   padding-top: 7rem;
 }
