--- a/src/app/authentication/list-rent/list-rent.component.html
+++ b/src/app/authentication/list-rent/list-rent.component.html
@@ -8,17 +8,17 @@
             <mat-label>Search Novel</mat-label>
             <input type="text" matInput>
           </mat-form-field>
-  
+
           <mat-form-field class="w-100 mt-2" appearance="outline">
             <mat-label>Search Author</mat-label>
             <input type="text" matInput>
           </mat-form-field>
-  
+
           <mat-form-field class="w-100 mt-2" appearance="outline">
             <mat-label>Search Uploader</mat-label>
             <input type="text" matInput>
           </mat-form-field>
-  
+
           <hr>
           <h3 class="mt-3">Filters</h3>
           <mat-form-field class="w-100 mt-4" appearance="outline">
@@ -39,12 +39,12 @@
   max="100000"
   aria-label="units"
   ></mat-slider>
-  
+
         </nb-card-body>
       </nb-card>
     </div>
-  
-    <div class="col-md-9">
+
+    <div class="col-md-9 flex-container">
         <nb-card >
             <nb-card-header>
               Rent Your Novels
@@ -68,5 +68,5 @@
           </nb-card>
     </div>
   </div>
-  
+
 </div>
