--- a/src/app/authentication/list-sell/list-sell.component.html
+++ b/src/app/authentication/list-sell/list-sell.component.html
@@ -1,9 +1,50 @@
 <div class="row mt-5">
-  <div class="col-md-4">
+  <div class="col-md-3">
+      <nb-card style="position: sticky;top:0;">
+        <nb-card-body>
+          <h3 class="mt-3">Search</h3>
+          <mat-form-field class="w-100 mt-4" appearance="outline">
+            <mat-label>Search Novel</mat-label>
+            <input type="text" matInput>
+          </mat-form-field>
+
+          <mat-form-field class="w-100 mt-2" appearance="outline">
+            <mat-label>Search Author</mat-label>
+            <input type="text" matInput>
+          </mat-form-field>
+
+          <mat-form-field class="w-100 mt-2" appearance="outline">
+            <mat-label>Search Uploader</mat-label>
+            <input type="text" matInput>
+          </mat-form-field>
+
+          <hr>
+          <h3 class="mt-3">Filters</h3>
+          <mat-form-field class="w-100 mt-4" appearance="outline">
+            <mat-label>Genre</mat-label>
+            <mat-select>
+              <mat-option value="">Fantasy</mat-option>
+              <mat-option value="">Mystry</mat-option>
+              <mat-option value="">Romance</mat-option>
+              <mat-option value="">Sci-Fi</mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-slider
+          thumbLabel
+  tickInterval="100"
+  step="100"
+  min="0"
+  max="100000"
+  aria-label="units"
+  ></mat-slider>
+
+        </nb-card-body>
+      </nb-card>
 
   </div>
 
-  <div class="col-md-8">
+  <div class="col-md-9 flex-container">
       <nb-card>
           <nb-card-header>
             Sell Your Novels
