--- a/src/app/user/layout/layout.component.html
+++ b/src/app/user/layout/layout.component.html
@@ -6,7 +6,7 @@
       <nb-action class="mt-4" nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']" routerLinkActive="router-link-active" >
           <h1 class="site-title"><Span style="color: rgb(56, 212, 56);">BOOK</Span>WORMS</h1>
       </nb-action>
-      <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']">Home</nb-action>
+      <nb-action  nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']">Home</nb-action>
     </nb-actions>
 
       <nb-select placeholder="Novels">
@@ -33,7 +33,6 @@
     <!-- visible when logged in -->
     <nb-actions size="medium" *ngIf="userService.loggedin">
       <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="[userService.currentUser.isadmin?'/admin':'/user']" >{{userService.currentUser.isadmin?'Admin Dashboard': 'User Dashboard'}}</nb-action>
-      <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" (click)="userService.logout()">Logout</nb-action>
     </nb-actions>
     <nb-user *ngIf="userService.loggedin"
        size="large"
@@ -42,6 +41,9 @@
        [picture]="url+userService.currentUser.avatar"
        [routerLink]="[userService.currentUser.isadmin?'/admin':'/user']">
     </nb-user>
+    <nb-actions size="medium" *ngIf="userService.loggedin">
+      <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" (click)="userService.logout()">Logout</nb-action>
+    </nb-actions>
 
 </nb-layout-header>
 
