--- a/src/app/authentication/layout/layout.component.html
+++ b/src/app/authentication/layout/layout.component.html
@@ -6,17 +6,17 @@
       <nb-action class="mt-4" nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']" routerLinkActive="router-link-active" >
           <h1 class="site-title"><Span style="color: rgb(56, 212, 56);">BOOK</Span>WORMS</h1>
       </nb-action>
-      <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']">Home</nb-action>
+      <nb-action  nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']">Home</nb-action>
     </nb-actions>
 
-      <nb-select placeholder="Novels">
-        <nb-option value="0" [routerLink]="['/app/exchangenovel']" routerLinkActive="router-link-active" >Exchange Novels</nb-option>
-        <nb-option value="1" [routerLink]="['/app/buynovel']" routerLinkActive="router-link-active" >Purchase Novels</nb-option>
-        <nb-option value="2" [routerLink]="['/app/rentnovel']" routerLinkActive="router-link-active" >Rent Novels</nb-option>
+      <nb-select  placeholder="Novels">
+        <nb-option  [routerLink]="['/app/exchangenovel']" routerLinkActive="router-link-active" >Exchange Novels</nb-option>
+        <nb-option  [routerLink]="['/app/buynovel']" routerLinkActive="router-link-active" >Purchase Novels</nb-option>
+        <nb-option  [routerLink]="['/app/rentnovel']" routerLinkActive="router-link-active" >Rent Novels</nb-option>
       </nb-select>
 
 
-      <nb-actions size="medium">
+      <nb-actions  size="medium">
 
       <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/signup']">About Us</nb-action>
       <!-- <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/app/rentnovel']">Rent Novels</nb-action>
@@ -35,7 +35,6 @@
     <!-- visible when logged in -->
     <nb-actions size="medium" *ngIf="userService.loggedin">
       <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="[userService.currentUser.isadmin?'/admin':'/user']" >{{userService.currentUser.isadmin?'Admin Dashboard': 'User Dashboard'}}</nb-action>
-      <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" (click)="userService.logout()">Logout</nb-action>
     </nb-actions>
     <nb-user *ngIf="userService.loggedin"
        size="large"
@@ -44,6 +43,10 @@
        [picture]="url+userService.currentUser.avatar"
        [routerLink]="[userService.currentUser.isadmin?'/admin':'/user']">
     </nb-user>
+    <nb-actions size="medium" *ngIf="userService.loggedin">
+      <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" (click)="userService.logout()">Logout</nb-action>
+    </nb-actions>
+
 
 </nb-layout-header>
     <nb-layout-column>
