--- a/src/app/authentication/list-sell/list-sell.component.html
+++ b/src/app/authentication/list-sell/list-sell.component.html
@@ -47,7 +47,7 @@
   <div class="col-md-9 flex-container">
       <nb-card>
           <nb-card-header>
-            Sell Your Novels
+            Purchase Novels
           </nb-card-header>
           <nb-list>
             <nb-list-item *ngFor="let novel of novelList">
