--- a/src/app/authentication/list-exchange/list-exchange.component.css
+++ b/src/app/authentication/list-exchange/list-exchange.component.css
@@ -26,3 +26,20 @@
   max-width: 250px;
   height: 400px;
 }
+
+#pname{
+  font-family:  Montserrat, sans-serif;;
+  display: inline-block;
+  text-align: center;
+  text-transform: uppercase;
+  word-spacing: 2mm;
+  font-size: 46px;
+  line-height: 28px;
+  font-weight: 400;
+  margin-top: 16px;
+  color: rgb(99, 100, 102);
+}
+
+#ft{
+  font-family:  Montserrat, sans-serif;;
+}
