--- a/src/app/authentication/list-sell/list-sell.component.html
+++ b/src/app/authentication/list-sell/list-sell.component.html
@@ -46,7 +46,7 @@
 
   <div class="col-md-9 flex-container">
       <nb-card>
-          <nb-card-header>
+          <nb-card-header id="pname">
             Purchase Novels
           </nb-card-header>
           <nb-list>
@@ -57,8 +57,8 @@
                     <img [src]="url+novel.avatar" class="img-fluid" alt="">
                   </div>
                   <div class="col-md-8">
-                    <h3>{{novel.title}}</h3>
-                    <h6 class="text-muted">{{novel.genre}}</h6>
+                    <h3 id="ft">{{novel.title}}</h3>
+                    <h6 id="ft" class="text-muted">{{novel.genre}}</h6>
                     <button [routerLink]="['/app/noveldetails', novel._id]" routerLinkActive="router-link-active" nbButton class="mt-4">{{novel.price | currency:'INR'}}</button>
                   </div>
                 </div>
