--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-10 mx-auto" style="height: 45rem;">
-    <nb-chat title="Nebular Conversational UI">
+    <nb-chat>
         <nb-chat-message *ngFor="let msg of messageList"
                          [message]="msg.text"
                          [reply]="msg.reply"
