--- a/src/app/authentication/signin/signin.component.css
+++ b/src/app/authentication/signin/signin.component.css
@@ -46,8 +46,8 @@ a {
 
 button {
 	border-radius: 20px;
-	border: 1px solid #a02bff;
-	background-color: #992bff;
+	border: 1px solid #1bbd36;
+	background-color: #18c736;
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
@@ -160,9 +160,9 @@ input {
 }
 
 .overlay {
-	background: #c941ff;
-	background: -webkit-linear-gradient(to right, #c32bffd7, #d341ffee);
-	background: linear-gradient(to right, #aa2bff, #e941ff);
+	background: #1bbd36;
+	background: -webkit-linear-gradient(to right, #20be3a, #24e744e5);
+	background: linear-gradient(to right, #36f12fd3, #19c736);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
